Set iframe max-width to resolve scaling issue on mobile e.g. when embedding YouTube videos

--- a/style.css
+++ b/style.css
@@ -34,10 +34,12 @@ nav a {
 figcaption {
     font-size: small;
 }
-
 img {
     max-width: 100%;
     height: auto;
+}
+iframe {
+    max-width: 100%;
 }
 
 /* 
